fixed contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    background: #44a1a0;
+    background: #86bbd8;
     padding: 2rem;
     grid-column: 1 / 3;
     display: flex;
@@ -30,24 +30,24 @@ header img {
 
 h1 {
     text-align: center;
-    color: #fcfffd;
+    color: #2f4858;
 }
 
 nav {
     grid-column: 1 / 3;
     text-align: center;
-    background-color: #0d5c63;
+    background-color: #2f4858;
     padding: 1rem;
     line-height: 1.8;
 }
 
 nav a {
     text-decoration: none;
-    color: #fcfffd;
+    color: #fffffa;
 }
 
 nav a:hover {
-    color: #78cdd7;
+    color: #9ee493;
 }
 
 ul {
@@ -72,8 +72,8 @@ h2 {
 
 h3 {
     text-align: center;
-    background-color: #44a1a0;
-    color: #fcfffd;
+    background-color: #86bbd8;
+    color: #2f4858;
     border-radius: 5px 5px 0 0;
     padding: 1rem;
 }
@@ -90,8 +90,9 @@ h3 {
 }
 
 footer {
-    background: #44a1a0;
+    background: #2f4858;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 3;
+    color: #daf7dc
 }
